# image-aes-wasm

./: .gitignore  README.md  RUST_SETUP.md  package-lock.json  package.json
backend/: .env.example  .env.production  package-lock.json  package.json
backend/src/: app.js
backend/src/controllers/: imageController.js
backend/src/middleware/: auth.js  security.js
backend/src/routes/: imageRoutes.js
backend/src/services/: imageService.js
backend/src/utils/: crypto.js  jwt.js  keyValidator.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/css/: style.css
frontend/src/js/: apiClient.js  app.js  canvasRenderer.js  config.js  cryptoFallback.js  cryptoOptimized.js  errorHandler.js  imageDecryptor.js  imageViewer.js  wasmLoader.js
frontend/test/: functionality-test.js  memory-analysis.js  memory-comparison.js  performance-test.js  test-runner.html
frontend/test/utils/: imageTestDataGenerator.js  testKeyGenerator.js
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs
